--- a/exampleSite/config.yml
+++ b/exampleSite/config.yml
@@ -169,6 +169,7 @@ params:
   # Sidebar only the following widgets. you can remove any you don't like it.
   widgets:
     - board
+    - social
     - tag_cloud
     - category
     - tag
